clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr33669.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr33669.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: rec_foo_t*, %arg1: s64i, %arg2: u32i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_foo_t*, %arg1: s64i, %arg2: u32i):
        %17 = alloca rec_foo_t*, "pxp", align 8
        %18 = alloca s64i, "offset", align 8
        %19 = alloca u32i, "extent", align 4
        %20 = alloca s64i, "__retval", align 8
        %21 = alloca s64i, "blkoffset", align 8
        %22 = alloca u32i, "diff", align 4
        %23 = alloca u32i, "blkextent", align 4
        store %arg0, %17
        store %arg1, %18
        store %arg2, %19
        %24 = load %18 : s64i, align 8
        %25 = load %18 : s64i, align 8
        %26 = load %17 : rec_foo_t*, align 8
        get_member
        %28 = load %27 : u32i, align 4
        %29 = cast(integral) %28 : s64i
        rem
        sub
        store %31, %21, align 8
        %32 = load %18 : s64i, align 8
        %33 = load %21 : s64i, align 8
        sub
        %35 = cast(integral) %34 : u32i
        store %35, %22, align 4
        %36 = load %22 : u32i, align 4
        %37 = load %19 : u32i, align 4
        %38 = add %36, %37 : u32i
        %39 = load %17 : rec_foo_t*, align 8
        get_member
        %41 = load %40 : u32i, align 4
        %42 = add %38, %41 : u32i
        %43 = const 1 : u32i
        sub
        %45 = load %17 : rec_foo_t*, align 8
        get_member
        %47 = load %46 : u32i, align 4
        div
        %49 = load %17 : rec_foo_t*, align 8
        get_member
        %51 = load %50 : u32i, align 4
        mul
        store %52, %23, align 4
        scope {
                %67 = load %17 : rec_foo_t*, align 8
                get_member
                %69 = load %68 : u32i, align 4
                %70 = load %23 : u32i, align 4
                cmp
                if %71 {
                        %72 = const -1 : s64i
                        store %72, %20
                        %73 = load %20 : s64i
                        return %73
                }
                yield
        }
        scope {
                %55 = load %17 : rec_foo_t*, align 8
                get_member
                %57 = load %56 : u32i, align 4
                %58 = load %17 : rec_foo_t*, align 8
                get_member
                %60 = load %59 : u32i, align 4
                cmp
                if %61 {
                        %62 = load %17 : rec_foo_t*, align 8
                        get_member
                        %64 = load %63 : u32i, align 4
                        %65 = load %17 : rec_foo_t*, align 8
                        get_member
                        store %64, %66, align 4
                        yield
                }
                yield
        }
        %53 = load %21 : s64i, align 8
        store %53, %20
        %54 = load %20 : s64i
        return %54
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_foo_t, "x", align 4
        %2 = alloca s64i, "xx", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 8192 : u32i
        get_member
        store %4, %5, align 4
        %6 = const 0 : u32i
        get_member
        store %6, %7, align 4
        %8 = const 0 : s64i
        %9 = const 4096 : u32i
        %10 = call @foo(%1, %8, %9) : s64i [all]
        store %10, %2, align 8
        scope {
                %13 = load %2 : s64i, align 8
                %14 = const 0 : s64i
                cmp
                if %15 {
                        %16 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %11 = const 0 : s32i
        store %11, %0
        %12 = load %0 : s32i
        return %12
}
