clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr33779_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr33779-1.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %9 = alloca s32i, "i", align 4
        %10 = alloca s32i, "__retval", align 4
        store %arg0, %9
        scope {
                %13 = load %9 : s32i, align 4
                %14 = const 1 : s32i
                %15 = add %13, %14 : s32i [nsw]
                %16 = cast(integral) %15 : u32i
                %17 = const 4 : u32i
                mul
                %19 = const 0 : u32i
                cmp
                if %20 {
                        %21 = const 1 : s32i
                        store %21, %10
                        %22 = load %10 : s32i
                        return %22
                }
                yield
        }
        %11 = const 0 : s32i
        store %11, %10
        %12 = load %10 : s32i
        return %12
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %4 = const 1073741823 : s32i
                %5 = call @foo(%4) : s32i [all]
                %6 = const 0 : s32i
                cmp
                if %7 {
                        %8 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
