clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr33870.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr33870.c" (c, x86_64-unknown-linux-gnu)
fn memset(%arg0: void*, %arg1: s32i, %arg2: u64i) -> void* [external, c, nothrow];
fn merge_pagelist(%arg1: rec_PgHdr*, %arg2: rec_PgHdr*) -> rec_PgHdr* [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: rec_PgHdr*, %arg2: rec_PgHdr*):
        %128 = alloca rec_PgHdr*, "pA", align 8
        %129 = alloca rec_PgHdr*, "pB", align 8
        %130 = alloca rec_PgHdr*, "__retval", align 8
        %131 = alloca rec_PgHdr, "result", align 8
        %132 = alloca rec_PgHdr*, "pTail", align 8
        store %arg1, %128
        store %arg2, %129
        store %131, %132, align 8
        scope {
                while {
                        %170 = load %128 : rec_PgHdr*, align 8
                        %171 = cast(ptr_to_bool) %170 : bool
                        %172 = ternary %171 ? { : bool
                                %174 = load %129 : rec_PgHdr*, align 8
                                %175 = cast(ptr_to_bool) %174 : bool
                                yield %175
                        } : {
                                %173 = const false : bool
                                yield %173
                        }
                        condition %172
                } do {
                        scope {
                                scope {
                                        %149 = load %128 : rec_PgHdr*, align 8
                                        get_member
                                        %151 = load %150 : u32i, align 8
                                        %152 = load %129 : rec_PgHdr*, align 8
                                        get_member
                                        %154 = load %153 : u32i, align 8
                                        cmp
                                        if %155 {
                                                %163 = load %128 : rec_PgHdr*, align 8
                                                %164 = load %132 : rec_PgHdr*, align 8
                                                get_member
                                                store %163, %165, align 8
                                                %166 = load %128 : rec_PgHdr*, align 8
                                                store %166, %132, align 8
                                                %167 = load %128 : rec_PgHdr*, align 8
                                                get_member
                                                %169 = load %168 : rec_PgHdr*, align 8
                                                store %169, %128, align 8
                                                yield
                                        } else {
                                                %156 = load %129 : rec_PgHdr*, align 8
                                                %157 = load %132 : rec_PgHdr*, align 8
                                                get_member
                                                store %156, %158, align 8
                                                %159 = load %129 : rec_PgHdr*, align 8
                                                store %159, %132, align 8
                                                %160 = load %129 : rec_PgHdr*, align 8
                                                get_member
                                                %162 = load %161 : rec_PgHdr*, align 8
                                                store %162, %129, align 8
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %136 = load %128 : rec_PgHdr*, align 8
                %137 = cast(ptr_to_bool) %136 : bool
                if %137 {
                        %146 = load %128 : rec_PgHdr*, align 8
                        %147 = load %132 : rec_PgHdr*, align 8
                        get_member
                        store %146, %148, align 8
                        yield
                } else {
                        scope {
                                %138 = load %129 : rec_PgHdr*, align 8
                                %139 = cast(ptr_to_bool) %138 : bool
                                if %139 {
                                        %143 = load %129 : rec_PgHdr*, align 8
                                        %144 = load %132 : rec_PgHdr*, align 8
                                        get_member
                                        store %143, %145, align 8
                                        yield
                                } else {
                                        %140 = const #cir.ptr<null> : rec_PgHdr*
                                        %141 = load %132 : rec_PgHdr*, align 8
                                        get_member
                                        store %140, %142, align 8
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        get_member
        %134 = load %133 : rec_PgHdr*, align 8
        store %134, %130
        %135 = load %130 : rec_PgHdr*
        return %135
}
fn sort_pagelist(%arg0: rec_PgHdr*) -> rec_PgHdr* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_PgHdr*):
        %50 = alloca rec_PgHdr*, "pIn", align 8
        %51 = alloca rec_PgHdr*, "__retval", align 8
        %52 = alloca rec_PgHdr*[25], "a", align 16
        %53 = alloca rec_PgHdr*, "p", align 8
        %54 = alloca s32i, "i", align 4
        store %arg0, %50
        %55 = cast(array_to_ptrdecay) %52 : rec_PgHdr**
        %56 = cast(bitcast) %55 : void*
        %57 = const 0 : s32i
        %58 = const 200 : u64i
        %59 = call @memset(%56, %57, %58) : void* [all]
        scope {
                while {
                        %126 = load %50 : rec_PgHdr*, align 8
                        %127 = cast(ptr_to_bool) %126 : bool
                        condition %127
                } do {
                        scope {
                                %77 = load %50 : rec_PgHdr*, align 8
                                store %77, %53, align 8
                                %78 = load %53 : rec_PgHdr*, align 8
                                get_member
                                %80 = load %79 : rec_PgHdr*, align 8
                                store %80, %50, align 8
                                %81 = const #cir.ptr<null> : rec_PgHdr*
                                %82 = load %53 : rec_PgHdr*, align 8
                                get_member
                                store %81, %83, align 8
                                scope {
                                        %98 = const 0 : s32i
                                        store %98, %54, align 4
                                        for cond {
                                                %121 = load %54 : s32i, align 4
                                                %122 = const 25 : s32i
                                                %123 = const 1 : s32i
                                                sub
                                                cmp
                                                condition %125
                                        } step {
                                                %99 = load %54 : s32i, align 4
                                                inc
                                                store %100, %54, align 4
                                                yield
                                        } body {
                                                scope {
                                                        scope {
                                                                %101 = load %54 : s32i, align 4
                                                                %102 = cast(integral) %101 : s64i
                                                                get_element
                                                                %104 = load %103 : rec_PgHdr*, align 8
                                                                %105 = const #cir.ptr<null> : rec_PgHdr*
                                                                cmp
                                                                if %106 {
                                                                        %117 = load %53 : rec_PgHdr*, align 8
                                                                        %118 = load %54 : s32i, align 4
                                                                        %119 = cast(integral) %118 : s64i
                                                                        get_element
                                                                        store %117, %120, align 8
                                                                        break
                                                                } else {
                                                                        %107 = load %54 : s32i, align 4
                                                                        %108 = cast(integral) %107 : s64i
                                                                        get_element
                                                                        %110 = load %109 : rec_PgHdr*, align 8
                                                                        %111 = load %53 : rec_PgHdr*, align 8
                                                                        %112 = call @merge_pagelist(%110, %111) : rec_PgHdr* [all]
                                                                        store %112, %53, align 8
                                                                        %113 = const #cir.ptr<null> : rec_PgHdr*
                                                                        %114 = load %54 : s32i, align 4
                                                                        %115 = cast(integral) %114 : s64i
                                                                        get_element
                                                                        store %113, %116, align 8
                                                                        yield
                                                                }
                                                                yield
                                                        }
                                                        yield
                                                }
                                                yield
                                        }
                                        yield
                                }
                                scope {
                                        %84 = load %54 : s32i, align 4
                                        %85 = const 25 : s32i
                                        %86 = const 1 : s32i
                                        sub
                                        cmp
                                        if %88 {
                                                %89 = load %54 : s32i, align 4
                                                %90 = cast(integral) %89 : s64i
                                                get_element
                                                %92 = load %91 : rec_PgHdr*, align 8
                                                %93 = load %53 : rec_PgHdr*, align 8
                                                %94 = call @merge_pagelist(%92, %93) : rec_PgHdr* [all]
                                                %95 = load %54 : s32i, align 4
                                                %96 = cast(integral) %95 : s64i
                                                get_element
                                                store %94, %97, align 8
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %60 = const 0 : s64i
        get_element
        %62 = load %61 : rec_PgHdr*, align 16
        store %62, %53, align 8
        scope {
                %65 = const 1 : s32i
                store %65, %54, align 4
                for cond {
                        %74 = load %54 : s32i, align 4
                        %75 = const 25 : s32i
                        cmp
                        condition %76
                } step {
                        %66 = load %54 : s32i, align 4
                        inc
                        store %67, %54, align 4
                        yield
                } body {
                        scope {
                                %68 = load %53 : rec_PgHdr*, align 8
                                %69 = load %54 : s32i, align 4
                                %70 = cast(integral) %69 : s64i
                                get_element
                                %72 = load %71 : rec_PgHdr*, align 8
                                %73 = call @merge_pagelist(%68, %72) : rec_PgHdr* [all]
                                store %73, %53, align 8
                                yield
                        }
                        yield
                }
                yield
        }
        %63 = load %53 : rec_PgHdr*, align 8
        store %63, %51
        %64 = load %51 : rec_PgHdr*
        return %64
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_PgHdr[5], "a", align 16
        %2 = alloca rec_PgHdr*, "p", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 5 : u32i
        %5 = const 0 : s64i
        get_element
        get_member
        store %4, %7, align 16
        %8 = const 1 : s64i
        get_element
        %10 = const 0 : s64i
        get_element
        get_member
        store %9, %12, align 8
        %13 = const 4 : u32i
        %14 = const 1 : s64i
        get_element
        get_member
        store %13, %16, align 16
        %17 = const 2 : s64i
        get_element
        %19 = const 1 : s64i
        get_element
        get_member
        store %18, %21, align 8
        %22 = const 1 : u32i
        %23 = const 2 : s64i
        get_element
        get_member
        store %22, %25, align 16
        %26 = const 3 : s64i
        get_element
        %28 = const 2 : s64i
        get_element
        get_member
        store %27, %30, align 8
        %31 = const 3 : u32i
        %32 = const 3 : s64i
        get_element
        get_member
        store %31, %34, align 16
        %35 = const #cir.ptr<null> : rec_PgHdr*
        %36 = const 3 : s64i
        get_element
        get_member
        store %35, %38, align 8
        %39 = const 0 : s64i
        get_element
        %41 = call @sort_pagelist(%40) : rec_PgHdr* [all]
        store %41, %2, align 8
        scope {
                %44 = load %2 : rec_PgHdr*, align 8
                get_member
                %46 = load %45 : rec_PgHdr*, align 8
                %47 = load %2 : rec_PgHdr*, align 8
                cmp
                if %48 {
                        %49 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %42 = const 0 : s32i
        store %42, %0
        %43 = load %0 : s32i
        return %43
}
